--- a/connect/templates/connect/delete_discussion.html
+++ b/connect/templates/connect/delete_discussion.html
@@ -20,7 +20,7 @@
                         {% csrf_token %}
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-danger">Delete Discussion</button>
-                            <a href="{% url 'connect:communityhome' %}" class="btn btn-outline-secondary">Cancel</a>
+                            <a href="{% url 'connect:community_home' %}" class="btn btn-outline-secondary">Cancel</a>
                         </div>
                     </form>
                 </div>
