--- a/connect/templates/connect/dashboard/sellerdashboard.html
+++ b/connect/templates/connect/dashboard/sellerdashboard.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "connect/base.html" %}
 {% block content %}
 <div class="container mt-4">
   <h3>Welcome, {{ user.username }} - Your Seller Dashboard</h3>
@@ -35,13 +35,13 @@
   <!-- Actions -->
   <div class="row mt-4">
     <div class="col-md-4 mb-3">
-      <a href="{% url 'add_product' %}" class="btn btn-success btn-block">Add New Product</a>
+      <a href="{% url 'connect:add_product' %}" class="btn btn-success btn-block">Add New Product</a>
     </div>
     <div class="col-md-4 mb-3">
-      <a href="{% url 'view_orders' %}" class="btn btn-warning btn-block">View Orders</a>
+      <a href="{% url 'connect:view_orders' %}" class="btn btn-warning btn-block">View Orders</a>
     </div>
     <div class="col-md-4 mb-3">
-      <a href="{% url 'product_reviews' %}" class="btn btn-info btn-block">Manage Reviews</a>
+      <a href="{% url 'connect:product_reviews' %}" class="btn btn-info btn-block">Manage Reviews</a>
     </div>
   </div>
 
@@ -57,8 +57,8 @@
           <div class="card-body">
             <h5 class="card-title">{{ product.name }}</h5>
             <p class="card-text">${{ product.price }}</p>
-            <a href="{% url 'edit_product' product.id %}" class="btn btn-warning btn-sm">Edit</a>
-            <a href="{% url 'delete_product' product.id %}" class="btn btn-danger btn-sm">Delete</a>
+            <a href="{% url 'connect:edit_product' product.id %}" class="btn btn-warning btn-sm">Edit</a>
+            <a href="{% url 'connect:delete_product' product.id %}" class="btn btn-danger btn-sm">Delete</a>
           </div>
         </div>
       </div>
