--- a/connect/templates/connect/edit_discussion.html
+++ b/connect/templates/connect/edit_discussion.html
@@ -35,7 +35,7 @@
                         
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-primary">Update Discussion</button>
-                            <a href="{% url 'connect:communityhome' %}" class="btn btn-outline-secondary">Cancel</a>
+                            <a href="{% url 'connect:community_home' %}" class="btn btn-outline-secondary">Cancel</a>
                         </div>
                     </form>
                 </div>
