--- a/connect/templates/connect/marketplacehome.html
+++ b/connect/templates/connect/marketplacehome.html
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Marketplace</h1>
         {% if user.seller %}
-            <a href="{% url 'connect:addproduct' %}" class="btn btn-primary">Add Product</a>
+            <a href="{% url 'connect:add_product' %}" class="btn btn-primary">Add Product</a>
         {% endif %}
     </div>
 
@@ -52,7 +52,7 @@
                 </div>
                 <div class="card-footer bg-transparent border-top-0">
                     <div class="d-grid gap-2">
-                        <a href="{% url 'connect:productdetails' product.id %}" class="btn btn-primary">View Details</a>
+                        <a href="{% url 'connect:productdetails' id=product.id %}" class="btn btn-primary">View Details</a>
                         {% if user.is_authenticated and not user.seller %}
                             <form method="post" action="{% url 'connect:add_to_cart' product.id %}">
                                 {% csrf_token %}
