--- a/connect/templates/connect/registration/signup.html
+++ b/connect/templates/connect/registration/signup.html
@@ -8,7 +8,7 @@
         <button class="btn btn-success w-100">Signup</button>
     </form>
     <p class="mt-3 text-center">
-        Already have an account? <a href="{% url 'login' %}">Login</a>
+        Already have an account? <a href="{% url 'connect:login' %}">Login</a>
     </p>
 </div>
 {% endblock %}
