--- a/connect/templates/connect/sellerdashboard.html
+++ b/connect/templates/connect/sellerdashboard.html
@@ -50,13 +50,14 @@
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h3>Your Products</h3>
-                <a href="{% url 'connect:addproduct' %}" class="btn btn-success">Add New Product</a>
+                <a href="{% url 'connect:add_product' %}" class="btn btn-success">Add New Product</a>
             </div>
             
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
+                            <th>Image</th>
                             <th>Name</th>
                             <th>Price</th>
                             <th>Stock</th>
@@ -66,17 +67,22 @@
                     <tbody>
                         {% for product in products %}
                         <tr>
+                            <td>
+                                {% if product.image %}
+                                    <img src="{{ product.image.url }}" alt="{{ product.name }}" style="width: 50px; height: 50px; object-fit: cover;">
+                                {% endif %}
+                            </td>
                             <td>{{ product.name }}</td>
                             <td>KES {{ product.price }}</td>
                             <td>{{ product.stock }}</td>
                             <td>
-                                <a href="{% url 'connect:editproduct' product.id %}" class="btn btn-sm btn-primary">Edit</a>
+                                <a href="{% url 'connect:editproduct' product.id %}" class="btn btn-sm btn-warning">Edit</a>
                                 <a href="{% url 'connect:productdetails' product.id %}" class="btn btn-sm btn-info">View</a>
                             </td>
                         </tr>
                         {% empty %}
                         <tr>
-                            <td colspan="4" class="text-center">No products added yet.</td>
+                            <td colspan="5" class="text-center">No products listed yet. Add your first product!</td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -122,4 +128,4 @@
         </div>
     </div>
 </div>
-{% endblock %} 
+{% endblock %}
